<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/shape_rounded_10_white"
    android:orientation="vertical"
    android:paddingVertical="8dp">

    <TextView
        android:id="@+id/tv_choose"
        style="@style/TextBold.Blue14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:text="@string/pilih"
        android:textAllCaps="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginVertical="8dp"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/tv_islam"
        style="@style/TextNormal.Blue14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_selector_grey"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp"
        android:text="@string/islam"
        app:drawableStartCompat="@drawable/ic_lens" />

    <TextView
        android:id="@+id/tv_protestan"
        style="@style/TextNormal.Blue14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_selector_grey"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp"
        android:text="@string/protestan"
        app:drawableStartCompat="@drawable/ic_lens" />

    <TextView
        android:id="@+id/tv_katolik"
        style="@style/TextNormal.Blue14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_selector_grey"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp"
        android:text="@string/katolik"
        app:drawableStartCompat="@drawable/ic_lens" />

    <TextView
        android:id="@+id/tv_hindu"
        style="@style/TextNormal.Blue14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_selector_grey"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp"
        android:text="@string/hindu"
        app:drawableStartCompat="@drawable/ic_lens" />

    <TextView
        android:id="@+id/tv_buddha"
        style="@style/TextNormal.Blue14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_selector_grey"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp"
        android:text="@string/buddha"
        app:drawableStartCompat="@drawable/ic_lens" />

    <TextView
        android:id="@+id/tv_khonghucu"
        style="@style/TextNormal.Blue14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_selector_grey"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp"
        android:text="@string/khonghucu"
        app:drawableStartCompat="@drawable/ic_lens" />
</LinearLayout>
