<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_rounded_top_20_cyan"
    android:orientation="vertical"
    android:paddingVertical="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextBold.White18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:text="@string/jadwal_kegiatan"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_close_white"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginVertical="8dp"
        android:background="@color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/one"
            style="@style/TextNormal.White14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingVertical="8dp"
            android:text="@string/nama_kegiatan"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_name" />

        <TextView
            android:id="@+id/colon1"
            style="@style/TextNormal.White14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:paddingVertical="7.5dp"
            android:text="@string/colon"
            app:layout_constraintStart_toEndOf="@id/one"
            app:layout_constraintTop_toTopOf="@id/et_name" />

        <EditText
            android:id="@+id/et_name"
            style="@style/EditText.Snow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/colon1"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            style="@style/TextNormal.White14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingVertical="12dp"
            android:text="@string/tanggal"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_date" />

        <TextView
            android:id="@+id/colon2"
            style="@style/TextNormal.White14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:paddingVertical="11dp"
            android:text="@string/colon"
            app:layout_constraintStart_toEndOf="@id/one"
            app:layout_constraintTop_toTopOf="@id/tv_date" />

        <TextView
            android:id="@+id/tv_date"
            style="@style/EditText.Snow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:text="@string/pilih_tanggal"
            app:drawableEndCompat="@drawable/ic_event_note"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/colon2"
            app:layout_constraintTop_toBottomOf="@id/et_name" />

        <TextView
            style="@style/TextNormal.White14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingVertical="12dp"
            android:text="@string/waktu"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_time" />

        <TextView
            android:id="@+id/colon3"
            style="@style/TextNormal.White14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:paddingVertical="11dp"
            android:text="@string/colon"
            app:layout_constraintStart_toEndOf="@id/one"
            app:layout_constraintTop_toTopOf="@id/tv_time" />

        <TextView
            android:id="@+id/tv_time"
            style="@style/EditText.Snow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:text="@string/pilih_waktu"
            app:drawableEndCompat="@drawable/ic_baseline_access_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/colon3"
            app:layout_constraintTop_toBottomOf="@id/tv_date" />

        <TextView
            style="@style/TextNormal.White14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingVertical="8dp"
            android:text="@string/tempat"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_place" />

        <TextView
            android:id="@+id/colon4"
            style="@style/TextNormal.White14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:paddingVertical="7dp"
            android:text="@string/colon"
            app:layout_constraintStart_toEndOf="@id/one"
            app:layout_constraintTop_toTopOf="@id/et_place" />

        <EditText
            android:id="@+id/et_place"
            style="@style/EditText.Snow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:gravity="top"
            android:inputType="textMultiLine|textCapSentences"
            android:lines="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/colon4"
            app:layout_constraintTop_toBottomOf="@id/tv_time"
            tools:ignore="Autofill,LabelFor" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="24dp"
        android:backgroundTint="@color/light_cyan"
        android:text="@string/submit" />
</LinearLayout>
