<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="8dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp">

        <TextView
            style="@style/TextBold.Black18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/select_user"
            android:textAlignment="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/tv_warga"
            style="@style/TextNormal.Black14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_selector_grey"
            android:drawablePadding="24dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            android:text="@string/warga"
            android:textAllCaps="true"
            app:drawableStartCompat="@drawable/ic_person_black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/tv_rt"
            style="@style/TextNormal.Black14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_selector_grey"
            android:drawablePadding="24dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            android:text="@string/ketua_rt"
            android:textAllCaps="true"
            app:drawableStartCompat="@drawable/ic_person_black" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/tv_admin"
            style="@style/TextNormal.Black14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_selector_grey"
            android:drawablePadding="24dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            android:text="@string/admin"
            android:textAllCaps="true"
            app:drawableStartCompat="@drawable/ic_person_black" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
