<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/snow">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="10dp"
        app:cardCornerRadius="20dp"
        app:contentPaddingBottom="10dp"
        app:contentPaddingLeft="10dp"
        app:contentPaddingTop="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_date"
                style="@style/TextNormal.Blue12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/tanggal"
                app:layout_constraintBottom_toBottomOf="@id/tv_name"
                app:layout_constraintEnd_toStartOf="@id/btn_expand"
                app:layout_constraintTop_toTopOf="@id/tv_name" />

            <TextView
                android:id="@+id/tv_name"
                style="@style/TextBold.Blue16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="4dp"
                android:text="@string/nama_pelapor"
                app:layout_constraintEnd_toStartOf="@id/tv_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/colon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@id/two"
                app:layout_constraintTop_toTopOf="@id/two">

                <TextView
                    style="@style/TextNormal.Blue12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colon" />

                <TextView
                    style="@style/TextNormal.Blue12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/colon" />

            </LinearLayout>

            <TextView
                android:id="@+id/two"
                style="@style/TextNormal.Blue12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/keterangan"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name" />

            <TextView
                android:id="@+id/tv_detail"
                style="@style/TextNormal.Blue12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/lorem_ipsum"
                app:layout_constraintEnd_toStartOf="@id/btn_expand"
                app:layout_constraintStart_toEndOf="@id/colon"
                app:layout_constraintTop_toBottomOf="@id/tv_name" />

            <TextView
                android:id="@+id/three"
                style="@style/TextNormal.Blue12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/status"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_detail" />

            <TextView
                android:id="@+id/tv_status"
                style="@style/TextNormal.Blue12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/status"
                app:layout_constraintEnd_toStartOf="@id/btn_expand"
                app:layout_constraintStart_toEndOf="@id/colon"
                app:layout_constraintTop_toBottomOf="@id/tv_detail" />

            <ImageView
                android:id="@+id/btn_expand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:background="@drawable/shape_selector_45_grey"
                android:padding="8dp"
                android:src="@drawable/ic_expand_more_blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_detail"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/expandableView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_expand"
                app:layout_constraintStart_toStartOf="@id/colon"
                app:layout_constraintTop_toBottomOf="@id/tv_status">

                <Button
                    android:id="@+id/btn_approve"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green"
                    android:paddingHorizontal="6dp"
                    android:paddingVertical="6dp"
                    android:text="@string/terima"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_reject"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_reject"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:backgroundTint="@color/red"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="6dp"
                    android:text="@string/tolak"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_approve"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>